# capstone_bengkelkoding

./: capstone.ipynb
.devcontainer/: devcontainer.json
capstone/: capstone1.ipynb  capstone2.ipynb  capstone3.ipynb  capstone4.ipynb  capstone4.py
capstone/deploy/: capstone4.py
capstonenadya/: Capstone4_UAS.ipynb  app (1).py  requirements.txt  scaler.pkl
deploy/: app.py  capstone4.ipynb  capstone4.py  capstone4_.py  pyproject.toml  requirements.txt
deploy2/: capstone4.py  requirements.txt
deploy3/: app2.py  caps.py  requirements.txt
