[tool.poetry]
name = "capstone_bengkelkoding"
version = "0.1.0"
description = "Aplikasi prediksi obesitas"
authors = ["Uly Atmi Azizah <ulyatmiazizah07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "1.36.0"
pandas = "2.2.2"
numpy = "2.0.2"
scikit-learn = "1.5.0"
imbalanced-learn = "0.13.1"
matplotlib = "3.9.0"
seaborn = "0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
